RESOLVED FIXED52549
frame-removed-during-resize.html test crashes (shows up as image-map-2.html crash)
https://bugs.webkit.org/show_bug.cgi?id=52549
Summary frame-removed-during-resize.html test crashes (shows up as image-map-2.html c...
Simon Fraser (smfr)
Reported 2011-01-16 19:34:46 PST
fast/replaced/frame-removed-during-resize.html crashes after r75900
Attachments
Patch (1.68 KB, patch)
2011-01-16 19:42 PST, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2011-01-16 19:36:17 PST
Simon Fraser (smfr)
Comment 2 2011-01-16 19:42:06 PST
Simon Fraser (smfr)
Comment 3 2011-01-16 19:50:34 PST
Note You need to log in before you can comment on or make changes to this bug.